force-app/main/default/objects/Airplane__c/Airplane__c.object-meta.xml
<CustomObject>
    <label>Airplane</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Aeroplane Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airplanes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>