force-app/main/default/objects/Airplane__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <label>Airline</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>Airplane Id</relationshipLabel>
    <relationshipName>Airplane_Id</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>