force-app/main/default/objects/Airplane__c/fields/Model_Numbr__c.field-meta.xml
<CustomField>
    <fullName>Model_Numbr__c</fullName>
    <label>Model Numbr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>